# ToxAndroidRefImpl

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  ISSUE_TEMPLATE.md  Identicon.md  Import_toxsave.md  LICENSE  OFFLINE_MESSAGES.md  PRIVACY_POLICY.md  PUSH_NOTIFICATION.md  README.md  _.config.yml  _config.yml  check_ffmpeg.sh  check_libsodium.sh  check_libvpx.sh  check_opus.sh  circle.yml  done.sh  eclipse_externalise_strings.txt  faq.md  import-export.md  index.md
.circleci/: checkout_fix.sh  config.yml
.github/: FUNDING.yml  dep_ffmpeg.yml  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  bobtests.yml  bobtests_linux.yml  change_log.yml  codeql.yml  dep_ffmpeg.yml  dep_libsodium.yml  dep_libvpx.yml  dep_opus.yml  dep_toxcore_jni.yml  dep_x264.yml  main.yml  maven_package.yml  release.yml  screenshot_tests.yml  tests.yml  tests_export_import.yml  tests_export_import_linux.yml  tests_linux.yml
.localrun/: .gitignore  Dockerfile  Dockerfile_old  build_and_sign_apk_docker.sh  run_docker.sh
_depsdummy_/: build.gradle
android-refimpl-app/: activate_video_bg_removal.sh  build.gradle  build_gwitness_jar.sh  get_latest_dev_artefacts.sh  gradle.properties  settings.gradle  update_gwitness_deps.sh
android-refimpl-app/app/: .gitignore  build.gradle  gradle_witness_ng.gradle  proguard-disable.pro  proguard-glide.pro  proguard-gson.pro  proguard-mikepenz-android-iconics.pro  proguard-project-test.pro  proguard-rules.pro  witness.gradle
android-refimpl-app/app/aars/: tensorflow-lite-gpu.aar  tensorflow-lite.aar
android-refimpl-app/app/nativelibs/armeabi/: jni-c-toxcore.c
android-refimpl-app/app/src/main/: AndroidManifest.xml  android_studio_code_style.xml
android-refimpl-app/gradle/wrapper/: gradle-wrapper.properties
android-refimpl-app/gwitness/: .gitignore  README.md  build.gradle
android-refimpl-app/jnilib/: build.gradle  gpr.gradle
android-refimpl-app/jnilib/src/main/: AndroidManifest.xml
android-refimpl-app/loggingstdout/: build.gradle
android-refimpl-app/loggingstdout/src/main/: AndroidManifest.xml
android-refimpl-app/native-audio-jni/: .gitignore  build.gradle
android-refimpl-app/native-audio-jni/src/main/: AndroidManifest.xml
android-refimpl-app/native-audio-jni/src/main/cpp/: CMakeLists.txt  native-audio-jni.c
android-refimpl-app/native-audio-jni/src/main/cpp/filter_audio/: CMakeLists.txt  filter_audio.c
android-refimpl-app/native-audio-jni/src/main/cpp/filter_audio/aec/: aec_core.c  aec_resampler.c  aec_resampler.h
android-refimpl-app/native-audio-jni/src/main/cpp/filter_audio/ns/: ns_core.c
android-refimpl-app/native-audio-jni/src/main/cpp/filter_audio/ns/include/: noise_suppression.h
android-refimpl-app/native-audio-jni/src/main/cpp/filter_audio/other/: delay_estimator_internal.h  delay_estimator_wrapper.h  speex_resampler.c  speex_resampler.h
android-refimpl-app/native-audio-jni/src/main/cpp/filter_audio/test/: playback_mic.c
android-refimpl-app/native-audio-jni/src/main/cpp/filter_audio/vad/: vad_gmm.h  vad_sp.c
android-refimpl-app/native-audio-jni/src/main/cpp/filter_audio/vad/include/: webrtc_vad.h
android-refimpl-app/native-audio-jni/src/main/cpp/rnnoise1/: CMakeLists.txt
android-refimpl-app/native-audio-jni/src/main/cpp/webrtc/: CMakeLists.txt  aecm_core.c  aecm_core.h  complex_fft.c  delay_estimator.c  delay_estimator.h  delay_estimator_wrapper.c  delay_estimator_wrapper.h  echo_control_mobile.c  echo_control_mobile.h  spl_init.c  typedefs.h
android-refimpl-app/native-audio-jni/src/main/cpp/webrtc6/: .gitignore  CMakeLists.txt
android-refimpl-app/native-audio-jni/src/main/cpp/webrtc6/webrtc/modules/audio_processing/: CMakeLists.txt
android-refimpl-app/native-audio-jni/src/main/cpp/webrtc6/webrtc/system_wrappers/: CMakeLists.txt
android-refimpl-app/orma_processor/: build.gradle
as_code_style/: zoff_C_001.xml
astyle/: astylerc
circle_scripts/: deps.sh  trifa.sh
convert_nodes_file/: .gitignore  convert.sh  convert2.sh  convert_for_trifa_android.sh
doc/: generic_mobile_wakeup_proposal_spec.md  qtox_proposal_spec.md  spec.md  tox_exit.txt  tox_startup.txt
fastlane/metadata/android/ar/: full_description.txt  short_description.txt
fastlane/metadata/android/de/: full_description.txt
fastlane/metadata/android/en-US/: full_description.txt
fastlane/metadata/android/es/: full_description.txt  short_description.txt
fastlane/metadata/android/mr/: title.txt  (+1 more)
jni-c-toxcore/: coffeecatch.c  coffeecatch.h  coffeejni.c  coffeejni.h  jni-001.h  jni-002.h  jni-c-toxcore.c  jni-main.c
jni-c-toxcore/filter_audio/: Makefile  filter_audio.c  filter_audio.h
jni-c-toxcore/filter_audio/aec/: aec_common.h  aec_core.h  aec_core_internal.h  aec_core_sse2.c  aec_rdft.c  aec_rdft.h  aec_rdft_sse2.c  echo_cancellation.c  echo_cancellation_internal.h
jni-c-toxcore/filter_audio/agc/: analog_agc.h  digital_agc.c  digital_agc.h
jni-c-toxcore/filter_audio/ns/: noise_suppression.c  noise_suppression_x.c  ns_core.h  nsx_core.c  nsx_core.h  nsx_core_c.c
jni-c-toxcore/filter_audio/other/: arch.h  complex_fft.c  complex_fft_tables.h  delay_estimator.c  delay_estimator.h  delay_estimator_wrapper.c  float_util.c  high_pass_filter.c  real_fft.h  resample_by_2_internal.h  spl_init.c  splitting_filter.c
jni-c-toxcore/filter_audio/test/: playback_mic_OSS.c
jni-c-toxcore/filter_audio/vad/: vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  vad_gmm.c  vad_sp.h  webrtc_vad.c
jni-c-toxcore/filter_audio/zam/: filters.c  filters.h
metadata/en-US/: full_description.txt
ndk_suppliment/: cpu-features.c
patches/: 10.libvpx_configure.sh.patch
stubaar/: AndroidManifest.xml
tools/: .gitignore  _update_ffmpeg_version.sh  _update_opus_version.sh  _update_sodium_version.sh  _update_vpx_version.sh  check_ffmpeg.sh  check_libsodium.sh  check_libvpx.sh  check_opus.sh  check_toxcore_jni.sh  check_x264.sh  maven_jniartefact_prepare_new_release_version.sh  plot_audio.sh  prepare_new_release_version.sh  run-cppcheck  run_docker.sh
(+440 files in other folders)
